sandbox/output
QualityAndSellInCalculator.java:49: error: cannot find symbol
            if (items[i].quality > 0) {
                ^
  symbol: variable items
QualityAndSellInCalculator.java:49: error: cannot find symbol
            if (items[i].quality > 0) {
                      ^
  symbol: variable i
QualityAndSellInCalculator.java:50: error: cannot find symbol
                items[i].quality -= 2;
                ^
  symbol: variable items
QualityAndSellInCalculator.java:50: error: cannot find symbol
                items[i].quality -= 2;
                      ^
  symbol: variable i
QualityAndSellInCalculator.java:53: error: cannot find symbol
            items[i].sellIn -= 1;
            ^
  symbol: variable items
QualityAndSellInCalculator.java:53: error: cannot find symbol
            items[i].sellIn -= 1;
                  ^
  symbol: variable i
QualityAndSellInCalculator.java:55: error: cannot find symbol
            if (items[i].sellIn < 0) {
                ^
  symbol: variable items
QualityAndSellInCalculator.java:55: error: cannot find symbol
            if (items[i].sellIn < 0) {
                      ^
  symbol: variable i
QualityAndSellInCalculator.java:56: error: cannot find symbol
                if (items[i].quality > 0) {
                    ^
  symbol: variable items
QualityAndSellInCalculator.java:56: error: cannot find symbol
                if (items[i].quality > 0) {
                          ^
  symbol: variable i
QualityAndSellInCalculator.java:57: error: cannot find symbol
                    items[i].quality -= 1;
                    ^
  symbol: variable items
QualityAndSellInCalculator.java:57: error: cannot find symbol
                    items[i].quality -= 1;
                          ^
  symbol: variable i
12 errors
Error: Could not find or load main class TexttestFixture
